increased editing font size, to resolve invisible bottom nikkud point

--- a/public/assets/stylesheets/typing.css
+++ b/public/assets/stylesheets/typing.css
@@ -3,7 +3,7 @@
 body {
         background-color: #FFFFFF;
         font-family: David, David CLM, Frankruehl, Narkisim, Times New Roman, Times, serif;
-        font-size: 16px;
+        font-size: 18px;
         line-height: 18px;
         text-align: right;
         direction: rtl;
